packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_lazy_storage_output.tz
parameter unit;
storage nat;
code { FAIL; };
view "get_map" unit (big_map string nat) { CDR; CDR; };
